# relay

./: .dockerignore  .env.example  .gitignore  ANSWER.txt  ATHENA_SETUP.md  CONTRIBUTING.md  CORRECT_ANSWER.txt  CREATE_GITHUB_REPO.md  CREDENTIALS_TEMPLATE.txt  DEMO.md  Dockerfile  E2E_TEST_REPORT.md  FINAL_SUMMARY.txt  FRESH_AGENT_E2E_TASK.txt  FRESH_AGENT_FINAL.txt  FRESH_AGENT_PROMPT.txt  FRESH_AGENT_PROMPT_E2E_V2.txt  FRESH_AGENT_PROMPT_FINAL.txt  FRESH_AGENT_PROMPT_V2.txt  FRESH_AGENT_REAL_DATA.txt  FRESH_AGENT_TASK.md  FRESH_AGENT_TEST_REPORT.txt  GITHUB_SETUP.md  GROUND_TRUTH_ANSWER.txt  MISSION_COMPLETE.md  MORNING_CHECKLIST.md  README.md  READY_FOR_FRESH_AGENT_V2.md  RELAY_PRESENTATION.html  RELAY_PRESENTATION.md  RELAY_V1_SPEC.md  S3_MULTI_FILE_STRATEGY.md  TESTING_COMPLEX_SOURCES.md  TONIGHT_SUMMARY.md  TRANSFORMATION_TEST_RESULTS.md  TRANSFORMATION_TEST_TASK.md  analysis_results.md  auto_cleanup.py  cleanup_pipelines.py  convert_to_html.py  (+48 more)
ai_requests/: pending_request.json
deploy/: ecs-task-definition.json
docs/: api.md  configuration.md  technical-overview.md
scripts/: migrate_json_to_sqlite.py
src/: __init__.py  ai_semantics.py  api.py  auth.py  config.py  connectors.py  database.py  dataset_search.py  encryption.py  file_storage.py  lineage.py  logging_config.py  main.py  metadata.py  models.py  ontology.py  pipeline.py  query.py  s3.py  scheduler.py  schemas.py  semantic_query.py  storage.py  streaming.py  transform.py  utils.py
templates/: index.html  index.html.backup  metadata.html
tests/: conftest.py  test_ai_semantics.py  test_auth.py  (+9 more)
(+21 files in other folders)
