[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "relay"
version = "2.0.0"
description = "Agent-Native Data Movement and Analytics Platform"
readme = "README.md"
requires-python = ">=3.11"
license = {text = "MIT"}

dependencies = [
    "fastapi>=0.109.0,<1.0",
    "uvicorn[standard]>=0.27.0,<1.0",
    "pydantic>=2.5,<3.0",
    "pydantic-settings>=2.1,<3.0",
    "sqlalchemy>=2.0,<3.0",
    "duckdb>=0.10,<2.0",
    "boto3>=1.34,<2.0",
    "requests>=2.31,<3.0",
    "pandas>=2.2,<3.0",
    "pyarrow>=15.0",
    "python-multipart>=0.0.6",
    "python-dotenv>=1.0,<2.0",
]

[project.optional-dependencies]
connectors = [
    "pymysql>=1.1,<2.0",
    "psycopg2-binary>=2.9,<3.0",
    "simple-salesforce>=1.12,<2.0",
    "openpyxl>=3.1,<4.0",
]
ai = [
    "anthropic>=0.39,<1.0",
]
dev = [
    "pytest>=8.0,<9.0",
    "pytest-asyncio>=0.23,<1.0",
    "pytest-cov>=4.1,<6.0",
    "httpx>=0.27,<1.0",
    "ruff>=0.4,<1.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
target-version = "py311"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.coverage.run]
source = ["src"]
omit = ["tests/*"]
